--- a/PetLor/package.json
+++ b/PetLor/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/vite": "^4.1.17",
+    "@tailwindcss/vite": "^4.1.18",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
     "framer-motion": "^12.23.26",
@@ -20,21 +20,21 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.10.1",
-    "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.17"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "sass-embedded": "^1.93.3",
+    "tailwindcss": "^4.1.18",
     "vite": "^7.1.7"
   }
 }
