--- a/PetLor/package.json
+++ b/PetLor/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.10.1",
     "react-toastify": "^11.0.5"
   },
