--- a/PetLor/package.json
+++ b/PetLor/package.json
@@ -16,7 +16,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "antd": "^6.1.1",
     "aos": "^2.3.4",
-    "axios": "^1.13.2",
+    "axios": "^1.13.5",
     "framer-motion": "^12.23.26",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
@@ -27,7 +27,9 @@
     "react-quill-new": "^3.7.0",
     "react-router-dom": "^7.10.1",
     "react-select": "^5.10.2",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
